--- a/config/core/resources/channel.yaml
+++ b/config/core/resources/channel.yaml
@@ -39,14 +39,15 @@ spec:
   preserveUnknownFields: false
   conversion:
     strategy: Webhook
-    # conversionReviewVersions indicates what ConversionReview versions are understood/preferred by the webhook.
-    # The first version in the list understood by the API server is sent to the webhook.
-    # The webhook must respond with a ConversionReview object in the same version it received.
-    conversionReviewVersions: ["v1", "v1beta1"]
-    clientConfig:
-      service:
-        name: webhook
-        namespace: cloud-run-events
+    webhook:
+      # conversionReviewVersions indicates what ConversionReview versions are understood/preferred by the webhook.
+      # The first version in the list understood by the API server is sent to the webhook.
+      # The webhook must respond with a ConversionReview object in the same version it received.
+      conversionReviewVersions: ["v1", "v1beta1"]
+      clientConfig:
+        service:
+          name: webhook
+          namespace: cloud-run-events
   versions:
   - &version
     name: v1
