--- a/config/core/resources/channel.yaml
+++ b/config/core/resources/channel.yaml
@@ -50,7 +50,7 @@ spec:
           namespace: cloud-run-events
   versions:
   - &version
-    name: v1
+    name: v1alpha1
     served: true
     storage: false
     subresources:
@@ -68,21 +68,20 @@ spec:
     - name: Age
       type: date
       jsonPath: .metadata.creationTimestamp
-    # We remove status.ServiceAccountName from the schema in v1.
-    schema:
+    schema: &v1alpha1Schema
       openAPIV3Schema: &openAPIV3Schema
         type: object
         properties: &properties
           spec:
             type: object
             properties:
-              serviceAccountName:
+              serviceAccountName: &serviceAccountName
                 type: string
                 description: >
                   k8s service account used to bind to a google service account to poll the Cloud Pub/Sub Subscription.
                   The value of the k8s service account must be a valid DNS subdomain name.
                   (see https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#dns-subdomain-names)
-              secret:
+              secret: &secret
                 type: object
                 description: >
                   Credential to use to manage Cloud Pub/Sub. The value of the secret entry must be a service
@@ -96,7 +95,7 @@ spec:
                     type: string
                   optional:
                     type: boolean
-              project:
+              project: &project
                 type: string
                 description: >
                   ID of the Google Cloud Project to own the Pub/Sub credentials. E.g.
@@ -105,25 +104,25 @@ spec:
               subscribable:
                 type: object
                 properties:
-                  subscribers:
+                  subscribers: &subscribers
                     type: array
                     items:
                       type: object
                       required:
                         - uid
-                      properties:
-                        uid:
+                      properties: &subscribersProperties
+                        uid: &uid
                           type: string
                           minLength: 1
-                        generation:
+                        generation: &generation
                           type: integer
-                        subscriberURI:
+                        subscriberURI: &subscriberURI
                           type: string
-                        replyURI:
+                        replyURI: &replyURI
                           type: string
                         deadLetterSink:
                           type: string
-                        delivery:
+                        delivery: &delivery
                           type: object
                           properties:
                             deadLetterSink:
@@ -151,10 +150,10 @@ spec:
           status: &status
             type: object
             properties: &statusProperties
-              observedGeneration:
+              observedGeneration: &observedGeneration
                 type: integer
                 format: int64
-              conditions:
+              conditions: &conditions
                 type: array
                 items:
                   type: object
@@ -175,7 +174,9 @@ spec:
                   required:
                     - type
                     - status
-              address:
+              serviceAccountName:
+                type: string
+              address: &address
                 type: object
                 properties:
                   url:
@@ -183,7 +184,7 @@ spec:
               subscribableStatus:
                 type: object
                 properties:
-                  subscribers:
+                  subscribers: &statusSubscribers
                     type: array
                     items:
                       type: object
@@ -197,29 +198,54 @@ spec:
                           type: string
                         message:
                           type: string
-              projectId:
+              projectId: &projectId
                 type: string
-              subscriptionId:
-                type: string
-  - <<: *version
-    name: v1alpha1
-    served: true
-    storage: false
-    # v1alpha1 and v1beta have status.properties.serviceAccountName in the schema
-    schema: &v1alpha1Schema
-      openAPIV3Schema:
-        <<: *openAPIV3Schema
-        properties:
-          <<: *properties
-          status:
-            <<: *status
-            properties:
-              <<: *statusProperties
-              serviceAccountName:
+              subscriptionId: &subscriptionId
                 type: string
   - <<: *version
     name: v1beta1
     served: true
     storage: true
-    # the schema of v1beta1 is exactly the same as v1alpha1 schema
     schema: *v1alpha1Schema
+      openAPIV3Schema:
+        <<: *openAPIV3Schema
+        properties:
+          <<: *properties
+          properties:
+            # No subscribable in v1beta1
+            serviceAccountName:
+              <<: *serviceAccountName
+            secret:
+              <<: *secret
+            project:
+              <<: *project
+            subscribers:
+              <<: *subscribers
+              properties:
+                # No deadLetterSink in subscribers properties in v1beta1
+                uid:
+                  <<: *uid
+                generation:
+                  <<: *generation
+                subscriberURI:
+                  <<: *subscriberURI
+                replyURI:
+                  <<: *replyURI
+                delivery:
+                  <<: *delivery
+          status:
+            <<: *status
+            properties:
+              # No subscribable in v1beta1
+              observedGeneration:
+                <<: *observedGeneration
+              conditions:
+                <<: *conditions
+              address:
+                <<: *address
+              subscribers:
+                <<: *statusSubscribers
+              projectId:
+                <<: *projectId
+              subscriptionId:
+                <<: *subscriptionId
