Corrected schema for channel.yaml

--- a/config/core/resources/channel.yaml
+++ b/config/core/resources/channel.yaml
@@ -206,7 +206,7 @@ spec:
     name: v1beta1
     served: true
     storage: true
-    schema: *v1alpha1Schema
+    schema:
       openAPIV3Schema:
         <<: *openAPIV3Schema
         properties:
