--- a/config/core/resources/brokercell.yaml
+++ b/config/core/resources/brokercell.yaml
@@ -11,7 +11,8 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-apiVersion: apiextensions.k8s.io/v1beta1
+
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: brokercells.internal.events.cloud.google.com
@@ -27,96 +28,102 @@ spec:
     categories:
     - knative-internal
   scope: Namespaced
-  subresources:
-    status: {}
   preserveUnknownFields: false
   conversion:
     strategy: Webhook
-    webhookClientConfig:
-      service:
-        name: webhook
-        namespace: cloud-run-events
-  additionalPrinterColumns:
+    webhook:
+      # conversionReviewVersions indicates what ConversionReview versions are understood/preferred by the webhook.
+      # The first version in the list understood by the API server is sent to the webhook.
+      # The webhook must respond with a ConversionReview object in the same version it received.
+      conversionReviewVersions: ["v1", "v1beta1"]
+      clientConfig:
+        service:
+          name: webhook
+          namespace: cloud-run-events
+  versions:
+  - &version
+    name: v1alpha1
+    served: true
+    storage: true
+    subresources:
+      status: {}
+    additionalPrinterColumns:
     - name: Ready
       type: string
-      JSONPath: ".status.conditions[?(@.type==\"Ready\")].status"
+      jsonPath: ".status.conditions[?(@.type==\"Ready\")].status"
     - name: Reason
       type: string
-      JSONPath: ".status.conditions[?(@.type==\"Ready\")].reason"
+      jsonPath: ".status.conditions[?(@.type==\"Ready\")].reason"
     - name: Age
       type: date
-      JSONPath: .metadata.creationTimestamp
-  versions:
-    - name: v1alpha1
-      served: true
-      storage: true
-  validation:
-    openAPIV3Schema:
-      type: object
-      properties:
-        spec:
-          type: object
-          properties:
-            components:
-              type: object
-              properties:
-                fanout:
-                  type: object
-                  properties:
-                    minReplicas:
-                      type: integer
-                      format: int64
-                    maxReplicas:
-                      type: integer
-                      format: int64
-                ingress:
-                  type: object
-                  properties:
-                    minReplicas:
-                      type: integer
-                      format: int64
-                    maxReplicas:
-                      type: integer
-                      format: int64
-                retry:
-                  type: object
-                  properties:
-                    minReplicas:
-                      type: integer
-                      format: int64
-                    maxReplicas:
-                      type: integer
-                      format: int64
-        status:
-          type: object
-          properties:
-            observedGeneration:
-              type: integer
-              format: int64
-            conditions:
-              type: array
-              items:
+      jsonPath: .metadata.creationTimestamp
+    schema:
+      openAPIV3Schema:
+        type: object
+        properties:
+          spec:
+            type: object
+            properties:
+              components:
                 type: object
                 properties:
-                  lastTransitionTime:
-                    # we use a string in the stored object but a wrapper object
-                    # at runtime.
-                    type: string
-                  message:
-                    type: string
-                  reason:
-                    type: string
-                  severity:
-                    type: string
-                  status:
-                    type: string
-                  type:
-                    type: string
-                required:
-                  - type
-                  - status
-            ingressTemplate:
-              type: string
-              description: >
-                IngressTemplate contains a URI template as specified by RFC6570 to generate Broker
-                ingress URIs. It may contain variables `name` and `namespace`.
+                  fanout:
+                    type: object
+                    properties:
+                      minReplicas:
+                        type: integer
+                        format: int64
+                      maxReplicas:
+                        type: integer
+                        format: int64
+                  ingress:
+                    type: object
+                    properties:
+                      minReplicas:
+                        type: integer
+                        format: int64
+                      maxReplicas:
+                        type: integer
+                        format: int64
+                  retry:
+                    type: object
+                    properties:
+                      minReplicas:
+                        type: integer
+                        format: int64
+                      maxReplicas:
+                        type: integer
+                        format: int64
+          status:
+            type: object
+            properties:
+              observedGeneration:
+                type: integer
+                format: int64
+              conditions:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    lastTransitionTime:
+                      # we use a string in the stored object but a wrapper object
+                      # at runtime.
+                      type: string
+                    message:
+                      type: string
+                    reason:
+                      type: string
+                    severity:
+                      type: string
+                    status:
+                      type: string
+                    type:
+                      type: string
+                  required:
+                    - type
+                    - status
+              ingressTemplate:
+                type: string
+                description: >
+                  IngressTemplate contains a URI template as specified by RFC6570 to generate Broker
+                  ingress URIs. It may contain variables `name` and `namespace`.
