--- a/config/core/deployments/controller.yaml
+++ b/config/core/deployments/controller.yaml
@@ -67,7 +67,7 @@ spec:
         - name: BROKER_CELL_RETRY_IMAGE
           value: ko://github.com/google/knative-gcp/cmd/broker/retry
         - name: INTERNAL_METRICS_ENABLED
-          value: "true"
+          value: "false"
         volumeMounts:
         - name: google-cloud-key
           mountPath: /var/secrets/google
