Extend Probe Helper for use with CloudPubSubSource probe (#1573)
* initial commit

* rename the cloud pubsub source event types

* get default project ID instead of relying only on env

* fixed authentication; standardized prober event names; fixed event handling upon reception from trigger

* addressed PR comments

* Update test/test_images/probe_helper/probe_helper.go

Co-authored-by: Cong Liu <conliu@google.com>

* addressed comments

Co-authored-by: Cong Liu <conliu@google.com>

--- a/test/test_images/probe_helper/probe_helper.yaml
+++ b/test/test_images/probe_helper/probe_helper.yaml
@@ -33,11 +33,23 @@ spec:
         - name: probe-helper
           image: ko://github.com/google/knative-gcp/test/test_images/probe_helper
           env:
+            - name: GOOGLE_APPLICATION_CREDENTIALS
+              value: /var/secrets/google/key.json
             - name: K_SINK
               value: "http://default-brokercell-ingress.cloud-run-events.svc.cluster.local/cloud-run-events-probe/default"
+            - name: CLOUDPUBSUBSOURCE_TOPIC_ID
+              value: "cloudpubsubsource-topic"
             - name: PROBE_PORT
               value: "8070"
             - name: RECEIVER_PORT
               value: "8080"
             - name: TIMEOUT_MINS
               value: "30"
+          volumeMounts:
+          - name: google-cloud-key
+            mountPath: /var/secrets/google
+      volumes:
+      - name: google-cloud-key
+        secret:
+          secretName: google-cloud-key
+          optional: true
