#1484. Configurable CPU and memory params for BrokerCell (#1509)
* Make avg CPU and avg memory params on BrokerCell configurable

* Re-generate deep copy for BrokerCell params

* Update unit test for BrokerCell defaults

* CPU and memory requests and limits on the BrokerCell

* Update the new params when making deployments

* ComponentParameters: re-generate deep copy

* Update unit test for broker cell paramters

* Exposing cpuLimit parameter for each service as well.

Added custom handling, on deployment, as it is not always set

* Extend BrokerCell defauling unit tests to cover cpu limits

* Apply formatter

* Minor: consistency in the CRD definition

* Fixed the default

* BrokerCellDefaults unit test: correct sample quantity

* More meaninful comments

* Auto-selection and validation for the HPA parameters, better test coverage, re-factoring

* Addressed feedback.

* Deep copy needed to be re-generated after changing the order

* Re-factoring (feedback): (1) new data contract; (2) webhook validation

* Standard path naming for the fields and enabling admission webhook for BrokerCell (triggers validation during ad-hoc edit by an operator)

* minor: formatting

* minor (feedback)

Co-authored-by: Rustem Bekmukhametov <rustemb@google.com>

--- a/config/core/resources/brokercell.yaml
+++ b/config/core/resources/brokercell.yaml
@@ -70,6 +70,28 @@ spec:
                   fanout:
                     type: object
                     properties:
+                      avgCPUUtilization:
+                        type: integer
+                        format: int64
+                      avgMemoryUsage:
+                        type: string
+                      resources:
+                        type: object
+                        properties:
+                          requests:
+                            type: object
+                            properties:
+                              cpu:
+                                type: string
+                              memory:
+                                type: string
+                          limits:
+                            type: object
+                            properties:
+                              cpu:
+                                type: string
+                              memory:
+                                type: string
                       minReplicas:
                         type: integer
                         format: int64
@@ -79,6 +101,28 @@ spec:
                   ingress:
                     type: object
                     properties:
+                      avgCPUUtilization:
+                        type: integer
+                        format: int64
+                      avgMemoryUsage:
+                        type: string
+                      resources:
+                        type: object
+                        properties:
+                          requests:
+                            type: object
+                            properties:
+                              cpu:
+                                type: string
+                              memory:
+                                type: string
+                          limits:
+                            type: object
+                            properties:
+                              cpu:
+                                type: string
+                              memory:
+                                type: string
                       minReplicas:
                         type: integer
                         format: int64
@@ -88,6 +132,28 @@ spec:
                   retry:
                     type: object
                     properties:
+                      avgCPUUtilization:
+                        type: integer
+                        format: int64
+                      avgMemoryUsage:
+                        type: string
+                      resources:
+                        type: object
+                        properties:
+                          requests:
+                            type: object
+                            properties:
+                              cpu:
+                                type: string
+                              memory:
+                                type: string
+                          limits:
+                            type: object
+                            properties:
+                              cpu:
+                                type: string
+                              memory:
+                                type: string
                       minReplicas:
                         type: integer
                         format: int64
