--- a/config/core/resources/channel.yaml
+++ b/config/core/resources/channel.yaml
@@ -51,6 +51,7 @@ spec:
   versions:
   - &version
     name: v1alpha1
+    # TODO: Flip served bit of v1alpha1 in https://github.com/google/knative-gcp/issues/1544.
     served: true
     storage: false
     subresources:
