--- a/config/core/resources/cloudbuildsource.yaml
+++ b/config/core/resources/cloudbuildsource.yaml
@@ -187,6 +187,7 @@ spec:
                   type: string
     - <<: *version
       name: v1alpha1
+      # TODO: Flip served bit of v1alpha1 in https://github.com/google/knative-gcp/issues/1544.
       served: true
       storage: false
       # v1alpha1 have status.properties.serviceAccountName in the schema
