--- a/config/pre-install/v0.18.0/topic.yaml
+++ b/config/pre-install/v0.18.0/topic.yaml
@@ -1,4 +1,4 @@
-# Copyright 2019 Google LLC
+# Copyright 2020 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -11,23 +11,24 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
+  name: topics.internal.events.cloud.google.com
   labels:
     events.cloud.google.com/release: devel
     events.cloud.google.com/crd-install: "true"
-  name: pullsubscriptions.internal.events.cloud.google.com
+    duck.knative.dev/addressable: "true"
 spec:
   group: internal.events.cloud.google.com
   names:
+    kind: Topic
+    plural: topics
+    singular: topic
     categories:
     - all
     - knative
     - pubsub
-    kind: PullSubscription
-    plural: pullsubscriptions
   scope: Namespaced
   preserveUnknownFields: false
   conversion:
@@ -55,21 +56,22 @@ spec:
     - name: Reason
       type: string
       jsonPath: ".status.conditions[?(@.type==\"Ready\")].reason"
+    - name: Address
+      type: string
+      jsonPath: .status.address.url
     - name: Age
       type: date
       jsonPath: .metadata.creationTimestamp
-    # We remove spec.properties.mode and status.properties.serviceAccountName from v1.
+    # We remove status.properties.serviceAccountName from the schema of v1.
     schema:
       openAPIV3Schema: &openAPIV3Schema
         type: object
         properties: &properties
-          spec: &spec
-            # TODO: update the OpenAPI to be much more robust.
+          spec:
             type: object
             required:
-              - sink
               - topic
-            properties: &specProperties
+            properties:
               serviceAccountName:
                 type: string
                 description: "Kubernetes service account used to bind to a google service account to poll the Cloud Pub/Sub Subscription. The value of the Kubernetes service account must be a valid DNS subdomain name. (see https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#dns-subdomain-names)"
@@ -85,59 +87,17 @@ spec:
                     type: boolean
               project:
                 type: string
-                description: "ID of the Google Cloud Project that the Pub/Sub Topic exists in. E.g. 'my-project-1234' rather than its display name, 'My Project' or its number '1234567890'. If omitted uses the Project ID from the GKE cluster metadata service."
-              sink:
-                type: object
-                description: "Reference to an object that will resolve to a domain name to use as the sink."
-                properties:
-                  uri:
-                    type: string
-                    minLength: 1
-                  ref:
-                    type: object
-                    required:
-                      - apiVersion
-                      - kind
-                      - name
-                    properties:
-                      apiVersion:
-                        type: string
-                        minLength: 1
-                      kind:
-                        type: string
-                        minLength: 1
-                      namespace:
-                        type: string
-                      name:
-                        type: string
-                        minLength: 1
-              transformer:
-                type: object
-                description: "Reference to an object that will resolve to a domain name to use as the transformer."
-                x-kubernetes-preserve-unknown-fields: true
-              ceOverrides:
-                type: object
-                description: "Defines overrides to control modifications of the event sent to the sink."
-                properties:
-                  extensions:
-                    type: object
-                    description: "Extensions specify what attribute are added or overridden on the outbound event. Each `Extensions` key-value pair are set on the event as an attribute extension independently."
-                    x-kubernetes-preserve-unknown-fields: true
+                description: "ID of the Google Cloud Project to own the Pub/Sub credentials. E.g. 'my-project-1234' rather than its display name, 'My Project' or its number '1234567890'. If omitted uses the Project ID from the GKE cluster metadata service."
               topic:
                 type: string
-                description: "ID of the Cloud Pub/Sub Topic to Subscribe to. It must be in the form of the unique identifier within the project, not the entire name. E.g. it must be 'laconia', not 'projects/my-gcp-project/topics/laconia'."
-              ackDeadline:
+                description: "ID of the Cloud Pub/Sub Topic to create. It must be in the form of the unique identifier within the project, not the entire name. E.g. it must be 'laconia', not 'projects/my-gcp-project/topics/laconia'."
+              propagationPolicy:
                 type: string
-                description:  "The default maximum time after a subscriber receives a message before the subscriber should acknowledge the message. Defaults to `30s`. Valid time units are `s`, `m`, `h`. The minimum deadline you can specify is 0 seconds. The maximum deadline you can specify is 600 seconds (10 minutes)."
-              retainAckedMessages:
+                enum: [CreateDelete, CreateNoDelete, NoCreateNoDelete]
+                description: "Propagation policy defines how Topic controls the Cloud Pub/Sub topic for lifecycle changes. Default is CreateNoDelete."
+              publisher:
                 type: boolean
-                description: "Whether to retain acknowledged messages. If true, acknowledged messages will not be expunged until they fall out of the RetentionDuration window."
-              retentionDuration:
-                type: string
-                description: "How long to retain messages in backlog, from the time of publish. If retainAckedMessages is true, this duration affects the retention of acknowledged messages, otherwise only unacknowledged messages are retained. Defaults to 7 days (`168h`). Cannot be longer than 7 days or shorter than 10 minutes. Valid time units are `s`, `m`, `h`."
-              adapterType:
-                type: string
-                description: "AdapterType determines the type of receive adapter that a PullSubscription uses."
+                description: "Flag that controls the creation of an HTTP publisher endpoint. If set to true, then a publisher will be created and this Topic will be Addressable (have status.address). If set to false, then no publisher will be created and this custom object represents the creation and deletion of a GCP Pub/Sub Topic only."
           status: &status
             type: object
             properties: &statusProperties
@@ -145,7 +105,9 @@ spec:
                 type: integer
                 format: int64
               conditions:
+                type: array
                 items:
+                  type: object
                   properties:
                     lastTransitionTime:
                       # we use a string in the stored object but a wrapper object
@@ -164,50 +126,30 @@ spec:
                   required:
                     - type
                     - status
-                  type: object
-                type: array
-              sinkUri:
-                type: string
-              ceAttributes:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    type:
-                      type: string
-                    source:
-                      type: string
               projectId:
                 type: string
               topicId:
                 type: string
-              subscriptionId:
-                type: string
-              transformerUri:
-                type: string
+              address:
+                type: object
+                properties:
+                  url:
+                    type: string
   - << : *version
     name: v1alpha1
     # TODO: Flip served bit of v1alpha1 in https://github.com/google/knative-gcp/issues/1544.
     served: true
     storage: false
-    # v1alpha1 and v1beta have spec.properties.mode and status.properties.serviceAccountName in the schema
+    # v1alpha1 and v1beta1 have serviceAccountName in status.properties in the schema
     schema: &v1alpha1Schema
       openAPIV3Schema:
         << : *openAPIV3Schema
         properties:
           << : *properties
-          spec:
-            << : *spec
-            properties:
-              << : *specProperties
-              mode:
-                type: string
-                enum: [CloudEventsBinary, CloudEventsStructured, PushCompatible]
-                description: "Mode defines the encoding and structure of the payload of when this PullSubscription invokes the sink. Default is CloudEventsBinary."
           status:
             << : *status
             properties:
-              << : *statusProperties
+              <<: *statusProperties
               serviceAccountName:
                 type: string
   - << : *version
