Add Channel and CloudBuildSource to the migration tool of storage version v1beta1

--- a/config/pre-install/v0.18.0/clusterrole.yaml
+++ b/config/pre-install/v0.18.0/clusterrole.yaml
@@ -39,6 +39,7 @@ rules:
       - "cloudpubsubsources"
       - "cloudauditlogssources"
       - "cloudschedulersources"
+      - "cloudbuildsources"
     verbs: &everything
       - "get"
       - "list"
@@ -52,4 +53,9 @@ rules:
     resources:
       - "pullsubscriptions"
       - "topics"
+    verbs: *everything
+  - apiGroups:
+      - "messaging.cloud.google.com"
+    resources:
+      - "channels"
     verbs: *everything
