Add TestNewDefaultsConfigFromConfigMap to dataresidency_defaults_test.go

--- a/config/core/configmaps/data-residency.yaml
+++ b/config/core/configmaps/data-residency.yaml
@@ -20,7 +20,7 @@ metadata:
 data:
   default-dataresidency-config: |
     clusterDefaults:
-      allowedpersistenceregions: []
+      messagestoragepolicy.allowedpersistenceregions: []
   _example: |
     ################################
     #                              #
