--- a/pkg/apis/configs/dataresidency/testdata/config-dataresidency.yaml
+++ b/pkg/apis/configs/dataresidency/testdata/config-dataresidency.yaml
@@ -15,7 +15,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: config-data-residency
+  name: config-dataresidency
   namespace: cloud-run-events
 data:
   default-dataresidency-config: |
