address PR comments

--- a/test/test_images/probe_helper/probe_helper.yaml
+++ b/test/test_images/probe_helper/probe_helper.yaml
@@ -41,7 +41,7 @@ spec:
             - name: CLOUDSTORAGESOURCE_BUCKET_ID
               value: "cloudstoragesource-bucket"
             - name: CLOUDSCHEDULERSOURCE_PERIOD
-              value: "1m"
+              value: "90s"
             - name: PROBE_PORT
               value: "8070"
             - name: RECEIVER_PORT
