--- a/pkg/reconciler/brokercell/testingdata/ingress_deployment.yaml
+++ b/pkg/reconciler/brokercell/testingdata/ingress_deployment.yaml
@@ -32,6 +32,11 @@ spec:
       app: cloud-run-events
       brokerCell: test-brokercell
       role: ingress
+  minReadySeconds: 60
+  strategy:
+    rollingUpdate:
+      maxUnavailable: 0
+      maxSurge: 1
   template:
     metadata:
       labels: *labels
@@ -48,8 +53,8 @@ spec:
             path: /healthz
             port: 8080
             scheme: HTTP
-          initialDelaySeconds: 5
-          periodSeconds: 2
+          initialDelaySeconds: 15
+          periodSeconds: 15
           successThreshold: 1
           timeoutSeconds: 5
         readinessProbe:
@@ -58,7 +63,7 @@ spec:
             path: /healthz
             port: 8080
             scheme: HTTP
-          periodSeconds: 2
+          periodSeconds: 15
           successThreshold: 1
           timeoutSeconds: 5
         env:
