Extend the Probe Helper to work with CloudSchedulerSource probe (#1674)
* initial commit.

* fully functional probe helper for cloud storage source

* fix one forgotten line

* initial commit.

* added documentation, unit tests for all probes, and improved logging

* small adjustment

* added a few comments and fixed inappropriate function signatures

* addressed PR comments

* small mistake

* fixes

* initial commit

* probe helper has configurable health checker

* test progress

* enabled probe helper tests; fixed test flakiness; use free ports for test comms

* use options to configure the probe helper; use errgroup to gracefully end test goroutines; fix race when reserving/closing free ports too quickly

* .

* use random ports in health check test

* close the free health checker port

* move from secret to WI

* initial commit.

* added documentation

* address PR comments

* changed runTestBroker return type to string

* add retry to cloudevents clients

* use free ports instead of free listeners everywhere

* .

* adjust to refactored probe helper

* more generous retry policy

* fixed test scheduler documentation

* address PR comments

* address PR comments

--- a/test/test_images/probe_helper/probe_helper.yaml
+++ b/test/test_images/probe_helper/probe_helper.yaml
@@ -40,6 +40,8 @@ spec:
               value: "cloudpubsubsource-topic"
             - name: CLOUDSTORAGESOURCE_BUCKET_ID
               value: "cloudstoragesource-bucket"
+            - name: CLOUDSCHEDULERSOURCE_PERIOD
+              value: "90s"
             - name: PROBE_PORT
               value: "8070"
             - name: RECEIVER_PORT
