--- a/pkg/reconciler/brokercell/testingdata/retry_deployment_with_status.yaml
+++ b/pkg/reconciler/brokercell/testingdata/retry_deployment_with_status.yaml
@@ -45,6 +45,7 @@ spec:
         sidecar.istio.io/inject: "false"
     spec:
       serviceAccountName: broker
+      terminationGracePeriodSeconds: 60
       containers:
       - name: retry
         image: retry
