--- a/pkg/reconciler/brokercell/testingdata/ingress_deployment.yaml
+++ b/pkg/reconciler/brokercell/testingdata/ingress_deployment.yaml
@@ -44,6 +44,7 @@ spec:
         sidecar.istio.io/inject: "true"
     spec:
       serviceAccountName: broker
+      terminationGracePeriodSeconds: 60
       containers:
       - name: ingress
         image: ingress
