--- a/pkg/reconciler/brokercell/testingdata/ingress_deployment_with_status.yaml
+++ b/pkg/reconciler/brokercell/testingdata/ingress_deployment_with_status.yaml
@@ -45,6 +45,7 @@ spec:
         sidecar.istio.io/inject: "true"
     spec:
       serviceAccountName: broker
+      terminationGracePeriodSeconds: 60
       containers:
       - name: ingress
         image: ingress
