--- a/pkg/reconciler/brokercell/testingdata/fanout_deployment.yaml
+++ b/pkg/reconciler/brokercell/testingdata/fanout_deployment.yaml
@@ -32,6 +32,11 @@ spec:
       app: cloud-run-events
       brokerCell: test-brokercell
       role: fanout
+  minReadySeconds: 60
+  strategy:
+    rollingUpdate:
+      maxUnavailable: 0
+      maxSurge: 1
   template:
     metadata:
       labels: *labels
@@ -39,6 +44,7 @@ spec:
         sidecar.istio.io/inject: "false"
     spec:
       serviceAccountName: broker
+      terminationGracePeriodSeconds: 60
       containers:
       - name: fanout
         image: fanout
