--- a/pkg/reconciler/brokercell/testingdata/fanout_deployment_with_status.yaml
+++ b/pkg/reconciler/brokercell/testingdata/fanout_deployment_with_status.yaml
@@ -33,6 +33,11 @@ spec:
       app: cloud-run-events
       brokerCell: test-brokercell
       role: fanout
+  minReadySeconds: 60
+  strategy:
+    rollingUpdate:
+      maxUnavailable: 0
+      maxSurge: 1
   template:
     metadata:
       labels: *labels
@@ -40,6 +45,7 @@ spec:
         sidecar.istio.io/inject: "false"
     spec:
       serviceAccountName: broker
+      terminationGracePeriodSeconds: 60
       containers:
       - name: fanout
         image: fanout
