Allow istio sidecar injection for all broker components

--- a/pkg/reconciler/brokercell/testingdata/fanout_deployment_with_status.yaml
+++ b/pkg/reconciler/brokercell/testingdata/fanout_deployment_with_status.yaml
@@ -42,7 +42,7 @@ spec:
     metadata:
       labels: *labels
       annotations:
-        sidecar.istio.io/inject: "false"
+        sidecar.istio.io/inject: "true"
     spec:
       serviceAccountName: broker
       terminationGracePeriodSeconds: 60
